# simple_api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: version.yml
src/simple_api/: flask.py  models.py  repository.py  schemas.py  service.py
src/simple_api/middleware/: __init__.py  logger.py
src/simple_api/routes/: exception.py  health.py  notes.py
src/simple_api/utils/: errors.py  logger.py  metadata.py  security.py  swagger.py  validators.py
tests/: conftest.py  test_main.py
tests/integration/: test_api_integration.py
tests/unit/: test_edge_cases.py  test_logging_middleware.py  test_main.py  test_models.py  test_repository.py  test_routes.py  test_security.py  test_service.py  test_validation.py
