[tool.poetry]
name = "simple_api"
version = "0.1.0"
description = "A simple Flask API with health endpoint."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simple_api", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.9"
flask = "^3.1.0"
gunicorn = "^23.0.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
requests = "^2.32.3"
cachecontrol = "^0.14.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.1"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.1.0"
pytest = "^8.4.2"
bandit = "^1.8.6"
pyinstaller = "^6.16.0"
mypy = "^1.18.2"
debugpy = "^1.8.17"
commitizen = "^4.9.1"

[tool.deptry]
extend_exclude = ["main.py"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:^version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"