[tool.poetry]
name = "simple_api"
version = "0.2.0"
description = "A simple Flask API with health endpoint."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simple_api", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.9"
flask = "^3.1.0"
gunicorn = "^23.0.0"
flasgger = "^0.9.7"
pydantic = "^2.12.2"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.1"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.1.0"
pytest = "^8.4.2"
bandit = "^1.8.6"
pyinstaller = "^6.16.0"
mypy = "^1.18.2"
debugpy = "^1.8.17"
commitizen = "^4.9.1"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
safety = "^3.2.11"
pip-audit = "^2.7.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.deptry]
extend_exclude = ["main.py"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:^version",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "htmlcov"]
skips = ["B101"]  # Skip assert_used check (common in tests)

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"